Fixing the align of the table

--- a/client/static/main.css
+++ b/client/static/main.css
@@ -22,3 +22,7 @@ body{
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
 }
+th{
+     width: 400px;
+     align-content: center;
+}
